--- a/ConvexHull/Algem/Algem.vcxproj.filters
+++ b/ConvexHull/Algem/Algem.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="draw.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="dd.cpp">
+    <ClCompile Include="d.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
